<resources>
    <string name="app_name">MadLevel1Example</string>
    <string name="question">What kind of animal is this?</string>
    <string name="giraffe">Giraffe</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect, the correct answer is Giraffe!</string>
    <string name="description">Mooie beschrijving</string>
    <string name="edit_default_value">Name</string>
    <string name="confirm">Confirm</string>
</resources>